--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /out/production/iMatMini/imatmini/ProductPanel.class
 /out/production/iMatMini/imatmini/ProductPanel.fxml
 /out/production/iMatMini/imatmini/RegisterWizard.fxml
+/out
