Redesigned header with new design

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,10 @@
 /out/production/iMatMini/imatmini/ProductPanel.class
 /out/production/iMatMini/imatmini/ProductPanel.fxml
 /out/production/iMatMini/imatmini/RegisterWizard.fxml
-/out
+/out/
+/.idea/
+/lib/
+/dist/
+/build/
+/nbproject/
 /iMatMini/out/
